--- a/index.html
+++ b/index.html
@@ -41,14 +41,39 @@
 
         </div>
         <div class="vitrina___coleccion">
+            <div class="vitrina__coleecion_1"></div>
+            <div class="vitrina__coleecion_1"></div>
+            <div class="vitrina__coleecion_1"></div>
+            <div class="vitrina__coleecion_1"></div>
 
         </div>
 
     </section>
 
     <footer>
+        <div class="footer__top">
+            <div class="footer_colum1">
+                <h3> Suscríbete y recibe <span class="descuento"> 10% de descuento</span> <br> en el mes de tu cumpleaños</h3>
+
+            </div>
+            <div class="footer_colum2"></div>
+            <div class="footer_colum3">
+                <img class="footer__imgMediopago" src="img/metodos-desk.png" alt="metodos de pago">
+                <p>Síguenos</p>
+            </div>
+        </div>
+        <div class="footer__medio">
+
+        </div>
+        <div class="footer__abajo">
+
+        </div>
+        <div class="footer__downbanner">
+            <img src="img/logo-mario-dorado.png" alt="logo mario dorado">
+        </div>
 
     </footer>
+
 
 
 </body>
