--- a/index.html
+++ b/index.html
@@ -52,20 +52,31 @@
 
     <footer>
         <div class="footer__top">
-            <div class="footer_colum1">
-                <h3> Suscríbete y recibe <span class="descuento"> 10% de descuento</span> <br> en el mes de tu cumpleaños</h3>
+            <div class="footer__content">
+                <div class="footer_colum">
+                    <div class="footer_colum1">
+                        <h3> Suscríbete y recibe <span class="descuento"> 10% de descuento</span> <br> en el mes de tu cumpleaños</h3>
 
-            </div>
-            <div class="footer_colum2"></div>
-            <div class="footer_colum3">
-                <img class="footer__imgMediopago" src="img/metodos-desk.png" alt="metodos de pago">
-                <p>Síguenos</p>
+                    </div>
+                    <div class="footer_colum2">
+                        <ul class="footer__menu">
+                            <li> <a href="#">Servicio al cliente</a></li>
+                            <li> <a href="#">Nuestras tiendas </a></li>
+                            <li> <a href="#" target="_blank">Superintendencia de Industria y Comercio</a></li>
+
+                            <p>Contáctanos de lunes a viernes de 8:00 a.m. a 5:00 p.m. Tel.: +571 2948181</p>
+
+                        </ul>
+
+                    </div>
+                    <div class="footer_colum3">
+                        <img class="footer__imgMediopago" src="img/metodos-desk.png" alt="metodos de pago">
+                        <p>Síguenos</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer__medio">
-
-        </div>
-        <div class="footer__abajo">
 
         </div>
         <div class="footer__downbanner">
