--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
                     <div class="footer_colum1">
                         <h3> Suscríbete y recibe <span class="descuento"> 10% de descuento</span> <br> en el mes de tu cumpleaños</h3>
 
+                        <form id="fomulario__footer" action="">
+                            <input type="email" name="email" required placeholder="Ingresa su correo">
+                            <button type="submit"></button>
+
+                            <div class="textolegal__footer">
+                                <label class="terminos__footer">
+                                <input type="checkbox" name="check">
+                                <a href="#">Aceptación de datos personales</a>
+                            </label>
+
+
+
+                                <p>
+                                    * Aplica en la primera compra durante el mes de tu cumpleaños. No es acumulable con otras promociones. Exclusivo Online.
+                                </p>
+                            </div>
+                        </form>
+
                     </div>
                     <div class="footer_colum2">
                         <ul class="footer__menu">
@@ -87,7 +105,9 @@
 
         </div>
         <div class="footer__downbanner">
-            <img src="img/logo-mario-dorado.png" alt="logo mario dorado">
+            <div class="conten__downbanner">
+                <img src="img/logo-mario-dorado.png" alt="logo mario dorado">
+            </div>
         </div>
 
     </footer>
